# redbox-copilot-streamlit

./: .env.example  .env.test  .gitignore  .gitmodules  .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  DEVELOPER_SETUP.md  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: backend-tests.yml  integration.yml
docs/architecture/: mvp-architecture.md  transactions_and_schema.md
docs/code_reference/: index.md
notebooks/: embed_batch_speed.ipynb  embed_speed.ipynb
redbox/: api.py  definitions.py  local.py  model_db.py
redbox/export/: docx.py
redbox/llm/: llm_base.py
redbox/llm/prompts/: chat.py  core.py  summary.py
redbox/llm/spotlight/: spotlight_collection.py
redbox/llm/summary/: summary.py  summary_collection.py
redbox/models/: __init__.py  base.py  chat.py  feedback.py  file.py  llm.py  settings.py  summary.py  tag.py  user.py
redbox/parsing/: chunk_clustering.py  chunkers.py  file_chunker.py
redbox/storage/: elasticsearch.py  storage_handler.py
redbox/tests/: conftest.py
redbox/tests/data/docs/: Human Rights Act 1998 (c. 42).xhtml.html  NATIONAL HEALTH SERVICE BILL.txt  Working Smarter (press release).docx
redbox/tests/storage/: test_backend.py
streamlit_app/: Dockerfile  Welcome.py  utils.py
streamlit_app/pages/: 1_Add_Documents.py  1_Documents.py  1_Files.py  2_Ask_the_Box.py  2_Chat.py  3_Summarise.py  3_Summarise_Documents.py  4_Preview_Files.py  5_Persona_Chat.py  6_Prompt_Playground.py
streamlit_app/utils/: __init__.py  formatting.py  logging.py  streamlit.py
tests/: test_e2e.py
