[tool.ruff]
line-length = 120
target-version = 'py311'

[tool.ruff.lint]
select = [
  "B",
  "E",
  "F",
  "I",
  "T",
  "W",
#  "SLF",
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"**/{tests}/*" = ["S101"]

[tool.mypy]
python_version = "3.11"
files = ["redbox", "streamlit_app"]
exclude = [
    "tests/",
]
ignore_missing_imports = true
plugins = [
  "pydantic.mypy"
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.bandit]
exclude_dirs = ["tests"]

[tool.deptry]
ignore_notebooks = true
pep621_dev_dependency_groups = ["dev"]
ignore = ["DEP003", "DEP004"]
known_first_party = ["utils"]

[tool.deptry.per_rule_ignores]
DEP002 = ["torch", "torchvision"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "incremental: marks tests as incremental (deselect with '-m \"not incremental\"')",
]
filterwarnings = [
    "ignore::DeprecationWarning:pydantic.*",
    "ignore::DeprecationWarning:pydantic_core.*"
]

[tool.pytest_env]
ELASTIC__HOST = "localhost"
MINIO_HOST = "localhost"
EMBEDDING_MODEL = "sentence-transformers/all-MiniLM-L6-v2"
REDIS_HOST = "localhost"
CONTACT_EMAIL = "test@example.com"
CORE_API_HOST = "http://localhost"

[tool.vulture]
sort_by_size = false
min_confidence = 80

[tool.poetry]
name = "redbox"
version = "1.0.0"
description = ""
authors = ["i.AI <i-dot-ai-enquiries@cabinetoffice.gov.uk>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Operating System :: POSIX :: Linux"
]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pydantic = "^2.7.0"
elasticsearch = "^8.12.0"
langchain = "^0.1.16"
boto3 = "^1.34.83"
python-docx = "^1.1.0"
python-dateutil = "^2.9.0.post0"
markdown = "^3.6"
pydantic-settings = "^2.2.1"
langchain-elasticsearch = "^0.1.3"
yarl = "^1.9.4"
aiohttp = "^3.9.5"
pyjwt = "^2.8.0"
requests = "^2.32.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-mock = "^3.14.0"
pytest-cov = "^5.0.0"
pylint = "^3.0.3"
mypy = "^1.9.0"
types-python-dateutil = "^2.9.0.20240315"
types-markdown = "^3.6.0.20240316"
ruff = "^0.3.6"
python-dotenv = "^1.0.1"
jupyter = "^1.0.0"
ipykernel = "^6.29.4"
pre-commit = "^3.6.2"
freezegun = "^1.2.2"
pep8-naming = "^0.13.3"
bandit = "^1.7.8"
types-python-jose = "^3.3.4.8"
detect-secrets = "^1.4.0"
types-pytz = "^2024.1.0.20240203"
pytest-asyncio = "^0.23.6"
boto3-stubs = {extras = ["essential"], version = "^1.34.99"}
moto = {extras = ["s3"], version = "^5.0.5"}
types-requests = "^2.31.0.20240406"
deptry = "^0.16.1"
types-redis = "^4.6.0.20240409"
pytest-env = "^1.1.3"
vulture = "^2.11"

[tool.poetry.group.ai.dependencies]
anthropic = "^0.25.1"
litellm = "^1.35.2"
openai = "^1.17.0"
sentence-transformers = "^2.6.0"
torch = [
  {version = "^2.2.2+cpu", source = "pytorch-cpu-src", platform = "linux"},
  {version = "^2.2.2", platform = "darwin"}
]
torchvision = [
  {version = "^0.17.2+cpu", source = "pytorch-cpu-src", platform = "linux"},
  {version = "^0.17.2", platform = "darwin"}
]

[tool.poetry.group.streamlit-app.dependencies]
streamlit = "^1.33.0"
lxml = {extras = ["html-clean"], version = "^5.2.1"}
loguru = "^0.7.2"
streamlit-feedback = "^0.1.3"
html2markdown = "^0.1.7"
unstructured = {extras = ["all-docs"], version = "^0.13.2"}

[tool.poetry.group.eval.dependencies]
jupyter = "^1.0.0"
datasets = "^2.19.1"

[[tool.poetry.source]]
name = "pytorch-cpu-src"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
download-model = 'download_embedder:download'
